ci: build the Vulkan device select layer
To avoid breaking the build.

Signed-off-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>
Reviewed-by: Tony Wasserka <tony.wasserka@gmx.de>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7843>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -864,6 +864,7 @@ meson-vulkan:
     VULKAN_DRIVERS: intel,amd,freedreno,broadcom
     EXTRA_OPTION: >
       -D vulkan-overlay-layer=true
+      -D vulkan-device-select-layer=true
       -D build-aco-tests=true
       -D werror=true
 
@@ -877,6 +878,7 @@ meson-i386:
     GALLIUM_DRIVERS: "iris,r300,radeonsi,swrast,virgl"
     EXTRA_OPTION: >
       -D vulkan-overlay-layer=true
+      -D vulkan-device-select-layer=true
       -D werror=true
 
 meson-s390x:
