--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -484,7 +484,7 @@ sanity:
       when: manual
     # Other cases default to never
   script:
-    - ci-fairy check-commits --junit-xml=check-commits.xml
+    # ci-fairy check-commits --junit-xml=check-commits.xml
     # ci-fairy check-merge-request only works in pre-merge pipelines for MRs
     - if test "x$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME" != "x$CI_COMMIT_REF_NAME"; then exit 0; fi
     - ci-fairy check-merge-request --require-allow-collaboration --junit-xml=check-merge-request.xml
