gitlab-ci: ignore nv_copy_depth_to_color
This seems to be spuriously changing between crash and fail, so let's
skip it for now.

Reviewed-by: Eric Anholt <eric@anholt.net>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7857>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -823,6 +823,7 @@ test-d3d12-windows:
   variables:
     GALLIUM_DRIVER: d3d12
     PIGLIT_PROFILE: quick_gl
+    PIGLIT_OPTIONS: -x nv_copy_depth_to_color
   script:
     - . .\.gitlab-ci\windows\piglit_run.ps1
   artifacts:
