microsoft/compiler: Add dedicated spirv_to_dxil libraries
Reviewed-by: Jesse Natalie <jenatali@microsoft.com>
Reviewed-by: Erik Faye-Lund <erik.faye-lund@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/8043>

--- a/meson.build
+++ b/meson.build
@@ -312,6 +312,8 @@ dep_clang = dependency(
 with_microsoft_clc = dep_clang.found()
 with_clc = dep_clang.found()
 
+with_spirv_to_dxil = get_option('spirv-to-dxil')
+
 if host_machine.system() == 'darwin'
   with_dri_platform = 'apple'
   pre_args += '-DBUILDING_MESA'
