--- a/src/microsoft/spirv_to_dxil/meson.build
+++ b/src/microsoft/spirv_to_dxil/meson.build
@@ -19,11 +19,13 @@
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 # IN THE SOFTWARE.
 
-subdir('compiler')
-if with_microsoft_clc
-  subdir('clc')
-endif
-subdir('resource_state_manager')
-if with_spirv_to_dxil
-  subdir('spirv_to_dxil')
-endif
+libspirv_to_dxil = both_libraries(
+  'spirv_to_dxil',
+  files(
+    'spirv_to_dxil.c',
+    'spirv_to_dxil.h',
+  ),
+  vs_module_defs : 'spirv_to_dxil.def',
+  dependencies : [idep_nir, idep_libdxil_compiler],
+  include_directories : [inc_include, inc_src, inc_compiler, inc_gallium],
+)
