--- a/src/meson.build
+++ b/src/meson.build
@@ -92,7 +92,7 @@ endif
 if with_any_intel
   subdir('intel')
 endif
-if with_microsoft_clc or with_gallium_d3d12
+if with_microsoft_clc or with_gallium_d3d12 or with_spirv_to_dxil
   subdir('microsoft')
 endif
 subdir('mesa')
