microsoft/compiler: Add spirv2dxil executable
Reviewed-by: Jesse Natalie <jenatali@microsoft.com>
Reviewed-by: Erik Faye-Lund <erik.faye-lund@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/8043>

--- a/src/microsoft/spirv_to_dxil/meson.build
+++ b/src/microsoft/spirv_to_dxil/meson.build
@@ -29,3 +29,15 @@ libspirv_to_dxil = both_libraries(
   dependencies : [idep_nir, idep_libdxil_compiler],
   include_directories : [inc_include, inc_src, inc_compiler, inc_gallium],
 )
+
+spirv_to_dxil = executable(
+  'spirv2dxil',
+  files(
+    'spirv2dxil.c',
+  ),
+  dependencies : [idep_nir, idep_libdxil_compiler, idep_getopt],
+  include_directories : [inc_include, inc_src, inc_compiler, inc_gallium],
+  link_with : libspirv_to_dxil.get_static_lib(),
+  build_by_default : true,
+  install : true,
+)
