--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1458,7 +1458,11 @@ arm64_a630_vk_sysmem:
     #
     # Known flakes in the list are between "arb_blend_func_extended" and
     # "varray-disabled"
+    #
+    # vs-output-array-vec2-index-wr-before-gs is skipped because it causes
+    # a flood of GPU hangs and makes the rest of the job flakey
     PIGLIT_OPTIONS: >-
+      -x vs-output-array-vec2-index-wr-before-gs
       -x arb_blend_func_extended-fbo-extended-blend-pattern_gles2
       -x clear-accum
       -x copypixels-sync
