ci: split src/mesa/**/* matching rule
Split the rule to avoid running useless tests when touching the driver specific
sources.

v2: removed src/mesa/drivers/x11/**/*

Reviewed-by: Eric Engestrom <eric@engestrom.ch>
Reviewed-by: Eric Anholt <eric@anholt.net> (v2)
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/8735>

--- a/.gitlab-ci/test-source-dep.yml
+++ b/.gitlab-ci/test-source-dep.yml
@@ -30,7 +30,23 @@
       - src/include/**/*
       - src/loader/**/*
       - src/mapi/**/*
-      - src/mesa/**/*
+      - src/mesa/*
+      - src/mesa/drivers/*
+      - src/mesa/drivers/common/**/*
+      - src/mesa/drivers/dri/*
+      - src/mesa/drivers/dri/common/**/*
+      - src/mesa/main/**/*
+      - src/mesa/math/**/*
+      - src/mesa/program/**/*
+      - src/mesa/sparc/**/*
+      - src/mesa/state_tracker/**/*
+      - src/mesa/swrast/**/*
+      - src/mesa/swrast_setup/**/*
+      - src/mesa/tnl/**/*
+      - src/mesa/tnl_dd/**/*
+      - src/mesa/vbo/**/*
+      - src/mesa/x86/**/*
+      - src/mesa/x86-64/**/*
       - src/util/**/*
 
 # Gallium core source file dependencies
