android: pan/mdg: create nir pass to lower image coord bitsize
Fixes the following building error:

FAILED: out/target/product/x86_64/obj/SHARED_LIBRARIES/gallium_dri_intermediates/LINKED/gallium_dri.so
...
ld.lld: error: undefined symbol: midgard_nir_lower_image_bitsize
>>> referenced by midgard_compile.c:321 (external/mesa/src/panfrost/midgard/midgard_compile.c:321)

Fixes: db725e1d52a6 ("pan/mdg: create nir pass to lower image coord bitsize")
Signed-off-by: Mauro Rossi <issor.oruam@gmail.com>
Acked-by: Alyssa Rosenzweig <alyssa.rosenzweig@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/8802>

--- a/src/panfrost/Makefile.sources
+++ b/src/panfrost/Makefile.sources
@@ -59,6 +59,7 @@ midgard_FILES := \
         midgard/midgard_liveness.c \
         midgard/midgard_helper_invocations.c \
         midgard/midgard_nir.h \
+        midgard/midgard_nir_lower_image_bitsize.c \
         midgard/midgard_ops.c \
         midgard/midgard_ops.h \
         midgard/midgard_opt_copy_prop.c \
